mobile.css
body {
  font-family: 'Roboto Slab', serif;
}

.mobileproject {
  font-family: 'Roboto Slab', serif;
  font-size: 3.5em;
}

.stripe, h1 {
  font-family: 'Rubik', sans-serif;
  font-size: 2em;
}

.textbox {
  width: 75%;
  margin: auto;
  font-size: 1em;
}

.text2 {
  margin: auto;
  font-size: 1em;
}

.bottom.stripe {
  text-align: center;
  font-size: 1.3em;
}

span#madeby {
  font-size: 1em;
}

/*p#bottomlinks {
  text-align: center;
  font-size: 2em;
  color: red;
}*/

.m-grid {
  height: 100vh;
  display: grid;
  /*grid-template-rows: 250px 200px 200px 600px 200px 200px 600px 200px 600px 250px;*/
  grid-template-columns: 1fr;
}

.grid-hash {
  height: 100vh;
  display: grid;
  /*grid-template-rows: 200px 1950px 3120px 3350px 1350px 1650px 2150px 2555px 960px 200px;*/
  grid-template-columns: 1fr;
}

.grid-info {
  height: 100vh;
  display: grid;
  /*grid-template-rows: 200px 950px 900px 2550px 510px 1200px 425px 950px 1900px 2650px 200px;*/
  grid-template-columns: 1fr;
}

.grid-blick {
  height: 100vh;
  display: grid;
  /*grid-template-rows: 200px 1680px 1950px 650px 530px 920px 1350px 1720px 950px 200px;*/
  grid-template-columns: 1fr;
}


.stripe {
  /*border-bottom: 20px solid #367960;*/
  background: #efe; /* For browsers that do not support gradients */
  grid-column-start: 1;
  grid-column-end: 5;
  display: inline;
  font-size: 3em;
  height: 200px;
  /*text-align: right;*/
  /*text-decoration: none;*/
}

a:visited, a:link {
  text-decoration: none;
  color: #333;
}

.content1 {
  background-color: orange;
  /*border-right: 3px solid #F78018;*/
  /*border: 9px solid #DA9473;*/
  grid-column-start: 1;
  grid-column-end: span 1;
  font-size: 2em;
  color: #fff;
  letter-spacing: 7px;
  padding: 0px 0 0 10px;
  text-align: center;
  height: 100px;
}

#smalltext {
  font-size: 15px;
  letter-spacing: 2px;
}

.content2 {
  /*border-left: 3px solid #eee;*/
  background-color: #FAE597;
  grid-column-start: 2;
  grid-column-end: span 1;
  /*padding: 30px 15px 0 55px;*/
  /*height: 100px;*/
}

.content2 h3, .content5 h3, .content7 h3 {
  text-align: right;
  font-size: 1.5em;
  /*color: #eee;*/
}

.content3 {
  /*border: 2px solid #ffcf23;*/
  background-color: #fff;
  grid-column-start: 3;
  grid-column-end: span 1;
}

.content4 {
  /*border: 4px solid white;*/
  background-color: #389E77;
  grid-column-start: 4;
  grid-column-end: span 1;
  height: 100px;
}

.content5 {
  background-color: #365193;
  grid-column-start: 1;
  grid-column-end: span 1;
  /*height: 100px;*/
}

.content6 {
  background-color: #fff;
  grid-column-start: 2;
  grid-column-end: span 1;
}

.content7 {
  background-color: antiquewhite;
  grid-column-start: 3;
  grid-column-end: span 1;
  height: 100px;
}

.content8 {
  background-color: #fff;
  grid-column-start: 4;
  grid-column-end: span 1;
}

#namespan {
  padding-left: 25px;
}

#titlespan {
  float: left;
  padding-right: 10px;
  padding-left: 25px;
  color: #365193;
  font-size: .8em;
}
/*
.fillings1 p {
  font-family: 'Oswald', sans-serif;
  font-size: 1.3em;
  padding: 10px 10px 10px 10px;
}*/
.centermobile{
    text-align: center;
    margin: auto;
}

.centermobilehome {
  padding: 25px 0 0px 290px;
}

.hash, .infoshop, .blick {
/*  display: flex;
  flex-direction: column;
  justify-content: center
  align-items: center;
*/  /*padding: 24px 10px 0px 35px;*/
}

.hash {
  padding: 25px 10px 0px 35px;
}

.infoshop {
  padding: 65px 0px 0px 20px;
}

.blick {
  padding: 55px 0px 0px 16px;
}

.content1-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 35px 0 0 0;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content1-infoshop {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 35px 0 0 0;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content2-hash {
  background-color: #fff;
  color: #222;
  text-align: center;
  padding: 25px 30px 20px 30px;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content2-infoshop {
  background-color: #E2F9F8;
  color: #222;
  text-align: center;
  padding: 25px 30px 20px 30px;
  grid-column-start: 1;
  grid-column-end: span 1;
}

.content3-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 55px 160px 0 70px;
  display: inline-block;
}

.content3-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 120px 160px 0 160px;
  display: inline-block;
}


.content3-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 70px 70px 70px 70px;
  display: inline-block;
}

.content3-hash img {
  float: left;
  padding: 0 70px 0 15px;
}

.content3-blick img {
  padding: 0 70px 0 70px;
}

.content4-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 85px 160px 0 70px;
  /*display:flex;*/
  /*justify-content: flex-start;*/
  display: inline-block;
  /*float: left;*/
}

.content4-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 85px 100px 0 100px;
  /*display: inline-block;*/
}

.content4-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #FAE597;
  padding: 85px 40px 80px 40px;
  /*display:flex;*/
  /*justify-content: flex-start;*/
  /*float: left;*/
}

.content4-hash img {
  float: left;
  padding: 40px 90px 0 15px;
}

.centerimage {
  padding: 65px 0 30px 0;
}

.content5-hash, .content5-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 35px 10px 0 30px;
}

.content6-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 75px 70px 70px 30px;
  background-color: #48758A;
  color: #fff;
}

.content6-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 0px 50px 10px 50px;
  background-color: #FAE597;
  color: #222;
}

.content6-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 0px 70px 10px 30px;
  background-color: #fff;
  color: #222;
}

.content7-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 75px 70px 70px 30px;
}

.content7-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #fff;
  padding: 30px 70px 20px 30px;
}

.content7-blick {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #F2F2F2;
  padding: 30px 70px 20px 30px;
}

.content8-hash {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  background-color: #efe;
  padding: 35px 30px 0 30px;
}

.content8-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 75px 70px 70px 30px;
  background: #E2F9F8;
}

.content9-infoshop {
  grid-column-start: 1;
  grid-column-end: span 1;
  text-align: center;
  padding: 75px 70px 70px 30px;
  background: #FFF;
}

#IS1_section, #IS2_section {
  display: inline-block;
  position: relative;
  width: 90%;
  left: 11%;
  margin-top: 0px;
}

#IS1_inner, #IS2_inner {
  padding-top: 53%;
}

.IS1_picdiv, .IS2_picdiv {
  background-size: 75%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 0px 0 0px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  /*width: 800px;*/
}

.IS1_picdiv {
  background-image: url("images/infoshop_screens1.png");
}

.IS2_picdiv {
  background-image: url("images/infoshop_screens2.png");
}

#midfi1_section, #midfi2_section {
  display: inline-block;
  position: relative;
  width: 84%;
  left: 14%;
  margin-top: 0px;
}

#midfi1_inner, #midfi2_inner {
  padding-top: 40%;
}

.midfi1_picdiv, .midfi2_picdiv {
  background-size: 69%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 0px 0 0px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.midfi1_picdiv {
  background-image: url("images/infoshop_series.jpg");
}

.midfi2_picdiv {
  background-image: url("images/infoshop_midfi.jpg");
}

#infopersona_section {
  display: inline-block;
  position: relative;
  width: 75%;
  left: 9%;
  margin-top: 20px;
}

#infopersona_inner {
  padding-top: 48%;
}

.infopersona_picdiv {
  background-image: url("images/user_persona_Jessica_infoshop.jpg");
  background-size: 80%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 0px 0 0px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}


#BA_section {
  display: inline-block;
  position: relative;
  width: 84%;
  left: 9%;
  margin-top: 20px;
}

#BA_inner {
  padding-top: 59%;
}

.BA_picdiv {
  background-image: url("images/blick_phone_annot_single.jpg");
  background-size: 80%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 0px 0 0px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

#BC_section {
  display: inline-block;
  position: relative;
  width: 90%;
  left: 11%;
  margin-top: 20px;
}

#BC_inner {
  padding-top: 79%;
}

.BC_picdiv {
  background-image: url("images/blick_desk_checkout.jpg");
  background-size: 80%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 0px 0 0px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

#BHF_section {
  display: inline-block;
  position: relative;
  width: 98%;
  left: 5%;
  margin-top: 40px;
}

#BHF_inner {
  padding-top: 19%;
}

.BHF_picdiv {
  background-image: url("images/blick_images_row.jpg");
  /*box-shadow: 10px 10px 5px #999;*/
  background-size: 95%;
  background-repeat: no-repeat;
  position: absolute;
  padding: 0px 0 0px 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

